<resources>
    <string name="app_name">Calculadora</string>

    //La calculadora inicia con 0
    <string name="textoInicio">0</string>

    //Primera fila de la calculadora
    <string name="buttonClear">C</string>
    <string name="buttonSigno">+/-</string>
    <string name="buttonPorcentaje">%</string>
    <string name="buttonDivide">/</string>

    //Segunda fila de la calculadora
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonMulti">*</string>

    //Tercera fila de la calculadora
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="buttonResta">-</string>

    //Cuarta fila de la calculadora
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="buttonSuma">+</string>

    //Quinta fila de la calculadora
    <string name="button0">0</string>
    <string name="buttonComa">.</string>
    <string name="buttonIgual">=</string>

</resources>